{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 540,
  "lineage": "1c799505-beed-19c6-5cdc-58351636aee8",
  "resources": [
    {
      "module": "module.app-gw",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": null,
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
                "ip_addresses": null,
                "name": "gwbepool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendHttpSettingsCollection/http80",
                "name": "http80",
                "path": "/path1/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": null
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "firewall_policy_id": null,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/frontendIPConfigurations/gwfepip",
                "name": "gwfepip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip1",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/frontendPorts/gwfe",
                "name": "gwfe",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnet-appgw"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/frontendIPConfigurations/gwfepip",
                "frontend_ip_configuration_name": "gwfepip",
                "frontend_port_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/frontendPorts/gwfe",
                "frontend_port_name": "gwfe",
                "host_name": "",
                "host_names": null,
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/httpListeners/gwlisten",
                "name": "gwlisten",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda",
            "identity": [],
            "location": "westeurope",
            "name": "appgatewayadda",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
                "backend_address_pool_name": "gwbepool",
                "backend_http_settings_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendHttpSettingsCollection/http80",
                "backend_http_settings_name": "http80",
                "http_listener_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/httpListeners/gwlisten",
                "http_listener_name": "gwlisten",
                "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/requestRoutingRules/reqrouting1",
                "name": "reqrouting1",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "adda-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "WAF_Medium",
                "tier": "WAF"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "tags": null,
            "timeouts": null,
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Detection",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.0"
              }
            ],
            "zones": null
          },
          "dependencies": [
            "module.lbpip.azurerm_public_ip.myterraformpublicip",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-appgw.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.appnic2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic2",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-appnic2",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetapp"
              }
            ],
            "location": "westeurope",
            "name": "appnic2",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-app.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.appnic1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic1",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-appnic1",
                "primary": true,
                "private_ip_address": "10.0.4.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetapp"
              }
            ],
            "location": "westeurope",
            "name": "appnic1",
            "private_ip_address": "10.0.4.5",
            "private_ip_addresses": [
              "10.0.4.5"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-app.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.adnic1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/adnic1",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ad-nic1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnet-mgmt"
              }
            ],
            "location": "westeurope",
            "name": "adnic1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-mgmt.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.dbnic1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic1",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-dbnic1",
                "primary": true,
                "private_ip_address": "10.0.5.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetdb"
              }
            ],
            "location": "westeurope",
            "name": "dbnic1",
            "private_ip_address": "10.0.5.5",
            "private_ip_addresses": [
              "10.0.5.5"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-db.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic2",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-fenic2",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetfe"
              }
            ],
            "location": "westeurope",
            "name": "fenic2",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic1",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-fenic1",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetfe"
              }
            ],
            "location": "westeurope",
            "name": "fenic1",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.dbnic2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic2",
            "internal_domain_name_suffix": "0yq0p45avigehi1x10nh5swbtf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-dbnic2",
                "primary": true,
                "private_ip_address": "10.0.5.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetdb"
              }
            ],
            "location": "westeurope",
            "name": "dbnic2",
            "private_ip_address": "10.0.5.4",
            "private_ip_addresses": [
              "10.0.5.4"
            ],
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-db.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic2",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "example",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic2/ipConfigurations/linux-fenic2|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
            "ip_configuration_name": "linux-fenic2",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic2"
          },
          "dependencies": [
            "module.app-gw.azurerm_application_gateway.network",
            "module.fenic2.azurerm_network_interface.myterraformnic",
            "module.lbpip.azurerm_public_ip.myterraformpublicip",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-appgw.azurerm_subnet.myterraformsubnet",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic1",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "example",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic1/ipConfigurations/linux-fenic1|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/applicationGateways/appgatewayadda/backendAddressPools/gwbepool",
            "ip_configuration_name": "linux-fenic1",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic1"
          },
          "dependencies": [
            "module.app-gw.azurerm_application_gateway.network",
            "module.fenic1.azurerm_network_interface.myterraformnic",
            "module.lbpip.azurerm_public_ip.myterraformpublicip",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-appgw.azurerm_subnet.myterraformsubnet",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.appnic2",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic2|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgapp",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic2",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgapp"
          },
          "dependencies": [
            "module.appnic2.azurerm_network_interface.myterraformnic",
            "module.nsgapp.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-app.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.appnic1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic1|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgapp",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/appnic1",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgapp"
          },
          "dependencies": [
            "module.appnic1.azurerm_network_interface.myterraformnic",
            "module.nsgapp.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-app.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.adnic1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/adnic1|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgmgmt",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/adnic1",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgmgmt"
          },
          "dependencies": [
            "module.adnic1.azurerm_network_interface.myterraformnic",
            "module.nsgmgmt.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-mgmt.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.dbnic1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic1|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgdb",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic1",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgdb"
          },
          "dependencies": [
            "module.dbnic1.azurerm_network_interface.myterraformnic",
            "module.nsgdb.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-db.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic2",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic2|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgfe",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic2",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgfe"
          },
          "dependencies": [
            "module.fenic2.azurerm_network_interface.myterraformnic",
            "module.nsgfe.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.fenic1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic1|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgfe",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/fenic1",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgfe"
          },
          "dependencies": [
            "module.fenic1.azurerm_network_interface.myterraformnic",
            "module.nsgfe.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-fe.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.dbnic2",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic_association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic2|/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgdb",
            "network_interface_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkInterfaces/dbnic2",
            "network_security_group_id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgdb"
          },
          "dependencies": [
            "module.dbnic2.azurerm_network_interface.myterraformnic",
            "module.nsgdb.azurerm_network_security_group.myterraformnsgssh",
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.subnet-db.azurerm_subnet.myterraformsubnet",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.nsgapp",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsgssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgapp",
            "location": "westeurope",
            "name": "nsgapp",
            "resource_group_name": "adda-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "ADDA Demo"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.nsgfe",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsgssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgfe",
            "location": "westeurope",
            "name": "nsgfe",
            "resource_group_name": "adda-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "ADDA Demo"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.nsgmgmt",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsgssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgmgmt",
            "location": "westeurope",
            "name": "nsgmgmt",
            "resource_group_name": "adda-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "ADDA Demo"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.nsgdb",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsgssh",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/networkSecurityGroups/nsgdb",
            "location": "westeurope",
            "name": "nsgdb",
            "resource_group_name": "adda-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "ADDA Demo"
            },
            "timeouts": null
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip3",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip4",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip4",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip1",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip2",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip6",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip7",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip7",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip4",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip5",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip5",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip5",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip6",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip6",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip1",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.lbpip2",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/publicIPAddresses/Publicip3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publicip3",
            "resource_group_name": "adda-rg",
            "sku": "Basic",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-app",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetapp",
            "name": "subnetapp",
            "resource_group_name": "adda-rg",
            "virtual_network_name": "adda-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-appgw",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "resource_group_name": "adda-rg",
            "virtual_network_name": "adda-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-fe",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetfe",
            "name": "subnetfe",
            "resource_group_name": "adda-rg",
            "virtual_network_name": "adda-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-db",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.5.0/24",
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnetdb",
            "name": "subnetdb",
            "resource_group_name": "adda-rg",
            "virtual_network_name": "adda-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-mgmt",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet/subnets/subnet-mgmt",
            "name": "subnet-mgmt",
            "resource_group_name": "adda-rg",
            "virtual_network_name": "adda-vnet"
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup",
            "module.vnet-spoke1.azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vnet-spoke1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "fba721d6-aae0-430c-a377-de9a7fcac19d",
            "id": "/subscriptions/25d9b7a7-6e17-43d6-920d-1b42f69113ea/resourceGroups/adda-rg/providers/Microsoft.Network/virtualNetworks/adda-vnet",
            "location": "westeurope",
            "name": "adda-vnet",
            "resource_group_name": "adda-rg",
            "tags": {
              "Environment": "ADDA Demo"
            }
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}